# libotr-ng

./: .clang-format  .gitignore  .splintrc  .travis.yml  2_msg_2_frag.patch  COLABORATING.MD  CONTRIBUTORS.txt  COPYING  COPYING.LESSER  INSTALL.md  LICENSE.txt  Makefile  Makefile.am  README.md  STRUCTURE.md  STYLE.md  autogen.sh  configure.ac  default_rules  fragment.c  install-deps-osx  keys  lsan.supp  osx.supp  parameters.py  run_make_install.sh  travis_before_script.sh  valgrind.sup  valgrind.supp
.github/: issue_template.md
m4/: gprof.m4
pkgconfig/: Makefile.am  libotr-ng.pc.in  libotr4.pc  libotr4.pc.in
src/: .gitignore  Makefile.am  alloc.c  alloc.h  auth.c  auth.h  b64.c  b64.h  base64.c  base64.h  client.c  client.h  client_callbacks.c  client_callbacks.h  client_orchestration.c  client_orchestration.h  client_profile.c  client_profile.h  client_state.c  client_state.h  constants.h  cramer_shoup.c  cramer_shoup.h  cramershoup_interface.c  cramershoup_interface.h  dake.c  dake.h  data_message.c  data_message.h  data_types.c  data_types.h  debug.c  debug.h  deserialize.c  deserialize.h  dh.c  dh.h  dread.c  dread.h  ed448.c  (+83 more)
src/include/: Makefile.am  Makefile.in  libotr-ng.h  libotrv4.h
src/test/: .gitignore  Makefile.am  all.c  functional.c  otr_assert.c  otr_assert.h  tags  test.c  test_api.c  test_auth.c  test_client.c  test_client_profile.c  test_cramershoup.c  test_dake.c  test_data_message.c  test_dh.c  test_double_ratchet.c  test_ed448.c  test_fixtures.c  test_fixtures.h  test_fragment.c  test_helpers.h  test_identity_message.c  test_instance_tag.c  test_key_management.c  test_list.c  test_messaging.c  test_non_interactive_messages.c  test_otr.c  test_otrng.c  test_otrv4.c  test_prekey.c  test_prekey_client.c  test_prekey_ensemble.c  test_prekey_message.c  test_prekey_messages.c  test_prekey_profile.c  test_prekey_proofs.c  test_prekey_server_client.c  test_protocol.c  (+6 more)
src/test/functionals/: all.h  test_api.c  test_auth.c  test_client.c  test_client_profile.c  test_dake.c  test_data_message.c  test_dh.c  test_double_ratchet.c  test_ed448.c  test_fragment.c  test_identity_message.c  test_instance_tag.c  test_key_management.c  test_list.c  test_messaging.c  test_non_interactive_messages.c  test_otrng.c  test_prekey_client.c  test_prekey_ensemble.c  test_prekey_messages.c  test_prekey_profile.c  test_prekey_proofs.c  test_prekey_server_client.c  test_serialize.c  test_smp.c  test_standard.c  test_tlv.c
src/test/units/: all.h  randomness.h  test_auth.c  test_client.c  test_client_profile.c  test_dake.c  test_data_message.c  test_dh.c  test_ed448.c  test_fragment.c  test_identity_message.c  test_instance_tag.c  test_key_management.c  test_list.c  test_messaging.c  test_non_interactive_messages.c  test_orchestration.c  test_otrng.c  test_persistence.c  test_prekey_ensemble.c  test_prekey_manager.c  test_prekey_messages.c  test_prekey_profile.c  test_prekey_proofs.c  test_prekey_server_client.c  test_serialize.c  test_standard.c  test_tlv.c
