#
#  This file is part of the Off-the-Record Next Generation Messaging
#  library (libotr-ng).
#
#  Copyright (C) 2016-2018, the libotr-ng contributors.
#
#  This library is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Lesser General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This library is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU Lesser General Public License for more details.
#
#  You should have received a copy of the GNU Lesser General Public License
#  along with this library.  If not, see <http://www.gnu.org/licenses/>.
#

nobase_include_HEADERS = libotr-ng.h

#TODO: This will be removed once we have a clear API defined.
#We need this for now otherwie the plugin won't compile.
otrngincdir = $(includedir)/libotr-ng
otrnginc_HEADERS = ../auth.h \
                   ../client_callbacks.h \
                   ../client.h \
                   ../client_profile.h \
                   ../client_state.h \
                   ../constants.h \
                   ../dake.h \
                   ../data_message.h \
                   ../debug.h \
                   ../deserialize.h \
                   ../dh.h \
                   ../ed448.h \
                   ../error.h \
                   ../fingerprint.h \
                   ../fragment.h \
                   ../instance_tag.h \
                   ../key_management.h \
                   ../keys.h \
                   ../list.h \
                   ../messaging.h \
                   ../mpi.h \
                   ../otrng.h \
                   ../padding.h \
                   ../prekey_ensemble.h \
                   ../prekey_profile.h \
                   ../protocol.h \
                   ../random.h \
                   ../serialize.h \
                   ../shake.h \
                   ../shared.h \
                   ../smp.h \
                   ../smp_protocol.h \
                   ../str.h \
                   ../tlv.h \
                   ../v3.h
